--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rect1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MayHeads.github.io/",
+  "homepage": "https://MayHeads.github.io/react-contact",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
